# KmlGenerator

./: CMakeLists.txt  README.md  install.nsi  kmlgenerator.cpp  kmlgenerator.h  main.cpp
.github/workflows/: macintosh.yml  windows.yml
lib/: NmeaBase.lib  gnsstype.h  nmeabase.h
